--- a/references.bib
+++ b/references.bib
@@ -1,10 +1,6 @@
-@article{36,
-      title = {Probing the Pareto frontier for basis pursuit solutions},
-     author = {Van Den Berg, Ewout and Friedlander, Michael P},
-    journal = {SIAM Journal on Scientific Computing},
-     volume = {31},
-     number = {2},
-      pages = {890--912},
-       year = {2009},
-  publisher = {SIAM}
+@book{36,
+      title = {数学规划基础},
+     author = {刘红英 and 夏勇 and 周水生},
+       year = {2012},
+  publisher = {北京航空航天大学出版社}
 }
