--- a/chap9.tex
+++ b/chap9.tex
@@ -41,28 +41,48 @@
 \begin{document}
 \maketitle
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% main body
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \section{二次规划}
 \label{sec:7.2}
+% finished
 
 具有二次目标函数和线性约束的约束优化问题被称为二次规划 (quadratic programming, QP) 问题. 这是一类非常常见的约束优化问题, 且它们也常常作为一般的约束优化问题的子问题出现. 二次规划问题的一般形式为
 \begin{equation}
-\label{eq:quadratic-programming}
+\label{eq:quadratic-programming-1}
 \begin{array}{cl}
 \text{minimize} & q(x) := \frac{1}{2} x^T G x + d^T x, \\
-\text{subject to} & a_i^T = b_i, ~~ i \in \mathcal{E}, \\
-& a_i^T x \leqslant b_i, ~~ i \in \mathcal{I},
+\text{subject to} & a_i^T x = b_i, ~~ i \in \mathcal{E} = \{1, \ldots, m_1\}, \\
+& a_i^T x \leqslant b_i, ~~ i \in \mathcal{I} = \{m_1 + 1, \ldots, m\},
 \end{array}
 \end{equation}
-其中$G$是$n$阶对称方阵, $\mathcal{E}, \mathcal{I}$是两个下标的有限集, $d, a_i,$ 是$n$阶常向量, $b_i$是常数, $i \in \mathcal{E} \cup \mathcal{I},$ 约束条件有等式约束以及不等式约束. 以上形式的二次规划问题可以将约束条件以矩阵的形式表达，形成更加紧凑的形式：
+其中$G$是$n$阶对称方阵, $d, a_i,$ 是$n$阶常向量, $b_i$是常数, $i \in \mathcal{E} \cup \mathcal{I},$ 约束条件有等式约束以及不等式约束. 以上形式的二次规划问题可以将约束条件以矩阵的形式表达，形成更加紧凑的形式：
 \begin{equation}
-\label{eq:quadratic-programming}
+\label{eq:quadratic-programming-2}
 \begin{array}{cl}
 \text{minimize} & q(x) := \frac{1}{2} x^T G x + d^T x, \\
-\text{subject to} & A x \preccurlyeq b,
+\text{subject to} & A^T_{\mathcal{E}} x = b_{\mathcal{E}}, ~~ A^T_{\mathcal{I}} x \preccurlyeq b_{\mathcal{I}},
 \end{array}
 \end{equation}
-其中$A$是行向量$a_i^T$排成的矩阵, $b$是常数$b_i$按相应次序排成的列向量, $i \in \mathcal{E} \cup \mathcal{I}.$
+其中$A_{\mathcal{E}} = (a_1, \ldots, a_{m_1})^T, b_{\mathcal{E}} = (b_1, \ldots, b_{m_1})^T;$ $A_{\mathcal{I}} = (a_{m_1+1}, \ldots, a_m)^T, b_{\mathcal{I}} = (b_{m_1+1}1, \ldots, b_m)^T.$ $A^T_{\mathcal{I}} x \preccurlyeq b_{\mathcal{I}}$表示向量$A^T_{\mathcal{I}} b_{\mathcal{I}}$的每个元素都小于等于向量$b$相应位置元素. 问题\eqref{eq:quadratic-programming-2}的KKT条件为
+\begin{equation}
+\label{eq:quadratic-programming-kkt}
+\begin{aligned}
+& \nabla q(x^*) - A^T x^* = 0, \\
+& A^T_{\mathcal{E}} x^* - b_{\mathcal{E}} = 0, \\
+& \lambda^*_{\mathcal{I}} \succcurlyeq 0, ~ A_{\mathcal{I}} x^* - b_{\mathcal{I}} \preccurlyeq 0, ~ (\lambda^*_{\mathcal{I}})^T (A_{\mathcal{I}} x^* - b_{\mathcal{I}}) = 0,
+\end{aligned}
+\end{equation}
+其中$A = (a_1, \ldots, a_m)^T;$ $\lambda^* = (\lambda_1^*, \ldots, \lambda_m^*)$为拉格朗日乘子, $\lambda^*_{\mathcal{I}} = (\lambda_{m_1+1}^*, \ldots, \lambda_m^*);$ $x^*$为KKT点.
 
+与线性规划问题类似, 一个二次规划问题总是能在有限步内求解, 或者证明其是不可行的或者无(下）界的. 当二次规划问题有解时, 若目标函数$q(x) = \frac{1}{2} x^T G x + d^T x$的Hessian阵$G$是半正定的, 那么$q(x)$是凸函数, 则该二次规划问题是凸规划问题, 其KKT点即为全局极小值点; 如果$G$是正定的, 则解是唯一的(唯一的全局极小值点). 当$G$不定时, 目标函数$q(x)$非凸, 可能有多个鞍点以及局部极小值点, 这些局部极小值点可能不是全局最优解. 此时, 求解全局最优解是一个NP-难的问题.
+
+
+\subsection{等式约束的二次规划问题}
+\label{subsec:7.2.1}
+% NOT finished
 
 \bibliographystyle{sbc}
 \bibliography{references}
