--- a/references.bib
+++ b/references.bib
@@ -1,6 +1,19 @@
-@book{36,
+@book{liu_2012_mpf,
       title = {数学规划基础},
      author = {刘红英 and 夏勇 and 周水生},
        year = {2012},
   publisher = {北京航空航天大学出版社}
+}
+
+@article{Murty_1987,
+      title = {{Some NP-complete problems in quadratic and nonlinear programming}},
+     author = {Katta G. Murty and Santosh N. Kabadi},
+    journal = {{Mathematical Programming}},
+        doi = {10.1007/bf02592948},
+       year = {1987},
+      month = {6},
+  publisher = {{Springer Science and Business Media LLC}},
+     volume = {39},
+     number = {2},
+      pages = {117--129}
 }
