update notebook eq-qp-example

--- a/notebooks/eq-qp-example.ipynb
+++ b/notebooks/eq-qp-example.ipynb
@@ -84,6 +84,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Hessian\n",
+    "\n",
     "sp.diff(psi, (x3, 2))"
    ]
   },
@@ -94,7 +96,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sp.diff(psi, (x3, 1))"
+    "x3_star = list(sp.roots(sp.diff(psi, (x3, 1)), x3))[0]\n",
+    "x3_star"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63716c31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A1 = A[:2, :]\n",
+    "A2 = A[2:, :]\n",
+    "\n",
+    "[x1_star, x2_star] = A1.T.inv() @ (b - A2.T @ sp.Matrix([x3_star]))\n",
+    "x1_star, x2_star"
    ]
   },
   {
@@ -115,7 +132,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sp.linsolve((A, g))"
+    "lambda_star = sp.Matrix(2, 1, list(sp.linsolve((A, g)))[0])\n",
+    "lambda_star"
    ]
   },
   {
@@ -188,21 +206,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4029edf9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sp.linsolve((q.T, sp.zeros(2, 1)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "7dd32f8c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Z = sp.Matrix(3, 1, [1, -4, 3])\n",
+    "Z = sp.Matrix(list(sp.linsolve((A.T, sp.zeros(2,1)))))\n",
+    "Z = Z.subs(\"tau0\", 1).T\n",
     "Z = Z / Z.norm()\n",
     "Z"
    ]
@@ -214,6 +223,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Hessian\n",
+    "\n",
     "Z.T @ G @ Z"
    ]
   },
@@ -234,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_star = (Z.T @ G @ Z).inv() @ (-Z.T @ (d + G @ Y @ b))\n",
+    "y_star = ((Z.T @ G @ Z).inv() @ (-Z.T @ (d + G @ Y @ b)))[0]\n",
     "y_star"
    ]
   },
@@ -245,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_star = Y @ b + Z @ y_star\n",
+    "x_star = Y @ b + Z @ sp.Matrix([y_star])\n",
     "x_star"
    ]
   },
