--- a/chap7.tex
+++ b/chap7.tex
@@ -20,8 +20,11 @@
 \setlength{\dashlinegap}{2pt}
 \setlength{\dashlinedash}{2pt}
 
+\usepackage[ruled,linesnumbered,algosection]{algorithm2e}
+\renewcommand*{\algorithmcfname}{算法}
+\renewcommand*{\algorithmautorefname}{算法}
+
 \usepackage[slantfont,boldfont]{xeCJK}
-\usepackage{fontspec}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
@@ -39,6 +42,10 @@
 \newcommand{\mylabel}[2]{#2\def\@currentlabel{#2}\label{#1}}
 \makeatother
 
+% \newcommand{\V}[1]{\bf{#1}}
+
+\DeclareMathOperator*{\argmax}{arg\,max}
+\DeclareMathOperator*{\argmin}{arg\,min}
 
 \newtheorem{thm}{定理}[section]
 \newtheorem{prop}[thm]{命题}
@@ -53,6 +60,8 @@
 \newtheorem{observation}[thm]{观察}
 
 \newcommand{\R}{\mathcal{R}}
+
+\numberwithin{equation}{section}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
@@ -214,7 +223,12 @@ x = Y b + Z y.
 \label{eq:general-elim-y}
 Z^T G Z y = - Z^T \left( d + G Y b \right)
 \end{equation}
-得唯一解$y^*,$ 再代入变量替换式\eqref{eq:quadratic-programming-eq-constrained-subs}得到原问题的唯一解$x^* = Y b + Z y^*.$ 由KKT条件\eqref{eq:quadratic-programming-kkt}, 拉格朗日乘子满足$A\lambda^* = -\left( Gx^* + d \right) =: - g^*,$ 两边同时左乘$Y^T,$ 有
+得唯一解$y^*,$ 再代入变量替换式\eqref{eq:quadratic-programming-eq-constrained-subs}得到原问题的唯一解$x^* = Y b + Z y^*.$ 由KKT条件\eqref{eq:quadratic-programming-kkt}, 拉格朗日乘子满足
+\begin{equation}
+\label{eq:general-elim-lagrange}
+A\lambda^* = -\left( Gx^* + d \right) =: - g^*,
+\end{equation}
+两边同时左乘$Y^T,$ 有
 \begin{equation}
 \label{eq:general-elim-lambda}
 \lambda^* = \left( A^T Y \right)^T \lambda^* = -Y^T g^*.
@@ -284,7 +298,7 @@ x^* = Y b + Z y^* = \left[\begin{matrix} \frac{2}{5} \\ - \frac{3}{5} \\ \frac{6
 我们回忆一下, 对于二次规划问题\eqref{eq:quadratic-programming-1}, 积极集$\mathcal{A}(x)$的定义为
 \begin{equation}
 \label{eq:qp-active-set}
-\mathcal{A} = \mathcal{A}(x) = \left\{ i ~ \middle| ~ a_i^T x = b_i, ~ i \in \mathcal{E} \cup \mathcal{I} \right\},
+\mathcal{A} = \mathcal{A}(x) = \left\{ i : ~ a_i^T x = b_i, ~ i \in \mathcal{E} \cup \mathcal{I} \right\},
 \end{equation}
 即在点$x$处, 等式成立的约束条件的下标组成的集合. 在积极集法中, 我们将积极集$\mathcal{A}$确定的约束看作等式约束, 而暂时忽略其余约束条件, 并通过某种迭代的方式不断修正调整这个集合, 直到识别出原问题\eqref{eq:quadratic-programming-1}的解处的正确的积极约束.
 
@@ -296,7 +310,6 @@ x^* = Y b + Z y^* = \left[\begin{matrix} \frac{2}{5} \\ - \frac{3}{5} \\ \frac{6
 \text{subject to} & a_i^T x = b_i, ~ i \in \mathcal{A}.
 \end{array}
 \end{equation}
-
 更方便的做法是将原点平移到$x^{(k)},$ 令$s = x - x^{(k)},$ 求解问题
 \begin{equation}
 \label{eq:qp-active-set-2}
@@ -305,9 +318,100 @@ x^* = Y b + Z y^* = \left[\begin{matrix} \frac{2}{5} \\ - \frac{3}{5} \\ \frac{6
 \text{subject to} & a_i^T s = 0, ~ i \in \mathcal{A},
 \end{array}
 \end{equation}
-其中$g^{(k)} = \nabla q(x^{(k)}) = G x^{(k)} + d$是原二次规划问题\eqref{eq:quadratic-programming-1}的目标函数$q(x)$在点$x^{(k)}$处的梯度向量. 这个问题是一个等式约束的二次规划问题, 可以用上一小节\S\ref{subsec:7.2.1}中介绍的等式约束二次规划问题的求解方法进行求解. 记其解为$s^{(k)},$ 拉格朗日乘子为$\lambda^{(k)}.$
+其中$g^{(k)} = \nabla q(x^{(k)}) = G x^{(k)} + d$是原二次规划问题\eqref{eq:quadratic-programming-1}的目标函数$q(x)$在点$x^{(k)}$处的梯度向量. 这个问题是一个等式约束的二次规划问题, 可以用上一小节\S\ref{subsec:7.2.1}中介绍的等式约束二次规划问题的求解方法进行求解.
 
-待写。。。。
+记问题\eqref{eq:qp-active-set-2}的解为$s^{(k)},$ 我们需要对各种可能的情况进行分类讨论.
+
+如果$s^{(k)} = 0,$ 即$x^{(k)}$是当前等式约束问题\eqref{eq:qp-active-set-1}的解, 那么可以根据式\eqref{eq:general-elim-lagrange}计算积极约束的拉格朗日乘子, 记为$\lambda^{(k)},$ 即有
+\begin{equation}
+\label{eq:qp-active-set-lambda}
+g^{(k)} + \sum\limits_{i \in \mathcal{A}} \lambda_i^{(k)} \alpha_i = 0.
+\end{equation}
+此时, 除对偶可行性条件$\lambda_i \geqslant 0, ~ i \in \mathcal{I}$以外, 其余KKT条件\eqref{eq:quadratic-programming-kkt}均满足. 当与原问题不等式约束对应的拉格朗日乘子均非负, 即
+\begin{equation*}
+\lambda_i^{(k)} \geqslant 0, ~ \forall i \in \mathcal{A} \cap \mathcal{I},
+\end{equation*}
+$x^{(k)}$是原问题的KKT点, 迭代结束, 求解完毕. 若不然, 则设
+\begin{equation*}
+q = \argmin_{i \in \mathcal{A} \cap \mathcal{I}} \lambda_i^{(k)},
+\end{equation*}
+有$\lambda_q^{(k)} < 0.$ 令$\mathcal{A} = \mathcal{A} \setminus \{ q \},$ 代入问题\eqref{eq:qp-active-set-2}, 并求解此新的子问题.
+
+如果$s^{(k)} \neq 0,$ 即$x^{(k)}$不是当前等式约束问题\eqref{eq:qp-active-set-1}的解, 那么我们进一步检验试探点$x^{(k)} + s^{(k)}$是否满足其他不在积极集$\mathcal{A}$中的约束条件. 如果都满足的话, 我们令
+\begin{equation}
+\label{eq:qp-active-set-next-step-1}
+x^{(k+1)} = x^{(k)} + s^{(k)},
+\end{equation}
+积极集保持不变, 进入下一步迭代搜索. 如果不然, 即存在指标$i \not\in \mathcal{A},$ 使得
+\begin{equation*}
+a_i^T x^{(k)} - b + s^{(k)} > 0
+\end{equation*}
+此时试探点$x^{(k)} + s^{(k)}$不是原问题的可行点, 需要将其投影到原问题的可行域. 我们沿着方向$p^{(k)} = s^{(k)}$进行线搜索, 选一个小于$1$但尽可能大的步长
+\begin{equation}
+\label{eq:qp-active-set-step-len-1}
+\begin{aligned}
+\bar{\alpha}_k & = \max \left\{ \alpha : ~ \alpha > 0, ~ a_i^T x^{(k)} - b_i + \alpha a_i^T p^{(k)} \leqslant 0, ~ a_i^T p^{(k)} > 0, ~ \forall i \not\in \mathcal{A} \right\}, \\
+& = \min_{\substack{i: i \not\in \mathcal{A} \\ a_i^T p^{(k)} > 0}} \frac{b_i - a_i^T x^{(k)}}{a_i^T p^{(k)}}
+\end{aligned}
+\end{equation}
+取下标$j$使得第$j$个约束取得上式中$\frac{b_i - a_i^T x^{(k)}}{a_i^T p^{(k)}}$的最大值, 即
+\begin{equation}
+\label{eq:qp-active-set-step-len-2}
+\bar{\alpha}_k = \frac{b_j - a_j^T x^{(k)}}{a_j^T p^{(k)}}, ~~ j = \argmin_{\substack{i: i \not\in \mathcal{A} \\ a_i^T p^{(k)} > 0}} \frac{b_i - a_i^T x^{(k)}}{a_i^T p^{(k)}},
+\end{equation}
+并称指标$j$对应的约束为阻滞(blocking)约束. 我们取
+\begin{equation}
+\label{eq:qp-active-set-next-step-2}
+x^{(k+1)} = x^{(k)} + \bar{\alpha}_k s^{(k)}, ~~ \mathcal{A} = \mathcal{A} \cup \{ j \}.
+\end{equation}
+这里我们把指标$j$添加到了积极集, 是因为对于$x^{(k+1)},$ 指标$j$对应的约束条件等式成立, 非积极约束$j$变成积极的. 迭代格式\eqref{eq:qp-active-set-next-step-1}与\eqref{eq:qp-active-set-next-step-2}可以统一表述为: 以等式问题\eqref{eq:qp-active-set-2}的解$s^{(k)}$为搜索方向$p^{(k)},$ 以
+\begin{equation}
+\label{eq:qp-active-set-step-len-uniform}
+\alpha_k = \min (1, \bar{\alpha}_k)
+\end{equation}
+为迭代步长, 得下一步的迭代点
+\begin{equation}
+\label{eq:qp-active-set-next-step-uniform}
+x^{(k+1)} = x^{(k)} + \alpha_k p^{(k)},
+\end{equation}
+同时根据是否有阻滞约束确定是否更新积极集: 若$\alpha_k < 1,$ 有约束阻滞$j,$ 则将$j$添加到积极集$\mathcal{A}.$
+
+至此, 我们可以以伪代码的形式, 将经典的积极集法表示为算法\ref{algo:active-set}.
+
+\begin{algorithm}
+\caption{求解带不等式约束的二次规划问题\eqref{eq:quadratic-programming-1}的积极集法}
+\label{algo:active-set}
+随机选取一个可行点$x^{(0)},$ 确定相应的积极集$\mathcal{A}$\;
+$k \gets 0.$\;
+\While {true}{
+    求等式约束二次规划问题\eqref{eq:qp-active-set-2}解$s$\;
+    \eIf{$s = 0$}{
+        由\eqref{eq:qp-active-set-lambda}式计算拉格朗日乘子$\lambda^{(k)}$\;
+        计算下标$q \gets \min \{ i : ~ \lambda^{(k)}_i, ~ i \in \mathcal{A} \cap \mathcal{I} \}$\;
+        \eIf{$\lambda^{(k)}_q \geqslant 0$}{
+            $x^* \gets x^{(k)}$\;
+            算法终止, 返回$x^*$\;
+        }{
+            $x_{k+1} \gets x_{k}$\;
+            将下标$q$从积极集$\mathcal{A}$中移除: $\mathcal{A} \gets \mathcal{A} \setminus \{ j \}$\;
+        }
+    }{
+        取线搜索方向$p^{(k)} \gets s$\;
+        由式\eqref{eq:qp-active-set-step-len-2}计算$\bar{\alpha}_k$以及相应的约束条件的下标$j$\;
+        取步长$\alpha_k \gets \min (1, \bar{\alpha}_k)$\;
+        令$x^{(k+1)} \gets x^{(k)} + \alpha_k p^{(k)}$\;
+        \If{步长$\alpha_k < 1$}{
+            将阻滞约束条件的下标$j$添加到积极集$\mathcal{A}$中: $\mathcal{A} \gets \mathcal{A} \cup \{ j \}$\;
+        }
+    }
+    $k \gets k + 1$\;
+}
+\end{algorithm}
+
+\begin{eg}
+\label{eg:qp-active-set-algo}
+我们来举例说明用积极集法求解含不等式约束的二次规划问题的步骤. 考虑如下的二次规划问题
+\end{eg}
 
 \subsection*{习题}
 % NOT finished
